# vcf-info-merger

./: README.md  pyproject.toml
.github/workflows/: run_checks_and_tests.yml
vcf_info_merger/: __init__.py  merge.py  types.py
